#1 db migration 관리를 위한 flyway 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,9 @@ server:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/home-order
+  flyway:
+    enabled: true
+    baseline-on-migrate: false
 
 logging:
   level:
